--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-#unclicked {
+.unclicked {
     margin: auto;
     height: 40px;
     width: 40px;
@@ -13,6 +13,14 @@
     width: 40px;
     border: 1px solid black;
     background-color: black;
+}
+
+.hover {
+    margin: auto;
+    height: 40px;
+    width: 40px;
+    border: 1px solid gray;
+    background-color: gray;
 }
 
 .project {
